--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -89,6 +89,14 @@ body {
 				font-style: normal;
 				color: #20455e;
 			}
+
+
+			.content {
+				font-size: 15px;
+				font-weight: 300;
+				font-style: normal;
+				color: #20455e;
+			}
 			
 			footer {
 
