Part 1D - See more/See less

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -138,6 +138,11 @@ body {
                 word-wrap: break-word;
             }
 
+            .ShowMore {
+                display: block;
+                text-decoration: none;
+            }
+
             .label {
                 background-color: #c4ddf8;
                 color: #092d46;
